OAuth added and packages installed
